--- a/src/components/button.css
+++ b/src/components/button.css
@@ -15,3 +15,20 @@
   text-align: center;
   color: #101828;
 }
+
+.btn_profile:hover {
+  background: #d0d5dd;
+  box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.05);
+}
+
+.btn_profile:focus {
+  background: #eaecf0;
+  border: 1px solid #98a2b3;
+  /* box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.05), 0px 0px 0px 4px #ebe9fe; */
+}
+
+.btn_profile:disabled {
+  background: #fcfcfd;
+  border: 1px solid #f2f4f7;
+  box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.05);
+}
