--- a/src/App.css
+++ b/src/App.css
@@ -37,6 +37,41 @@
   }
 }
 
+.profile_container {
+  position: relative;
+  width: 88px;
+  height: 88px;
+}
+
+.profile_container .profile_img {
+  transition: 0.5s ease;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+}
+
+.profile_container:hover .profile_img {
+  opacity: 0.3;
+}
+
+.profile_container .camera_img {
+  transition: 0.5s ease;
+  opacity: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
+
+.profile_container:hover .camera_img {
+  opacity: 1;
+}
+
+.profile_container:focus {
+  border: 5.5px solid #ebe9fe;
+}
+
 .profile_heading {
   position: relative;
   font-style: normal;
@@ -65,4 +100,30 @@
   background: #f2f4f7;
   border: 1px solid #d0d5dd;
   border-radius: 20px;
+}
+
+@media screen and (max-width: 767px) {
+  .btn_share {
+    display: none;
+  }
+
+  .btn_share_mobile {
+    position: absolute;
+    top: 7%;
+    right: 0;
+    margin-right: 4%;
+  }
+
+  .btn_share_mobile:focus {
+    outline: none;
+    background: #ffffff;
+    border: 1px dashed #d0d5dd;
+    box-shadow: 0px 0px 0px 4px #f2f4f7;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .btn_share_mobile {
+    display: none;
+  }
 }
